# say-less

./: .gitignore  .pre-commit-config.yaml  README.md  collector.py  exporter.py  main.py  pyproject.toml  say-less.py  settings.py  utils.py
project_types/: types.py
