[project]
name = "say-less"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "jsonschema>=4.25.1",
    "pre-commit>=4.3.0",
    "pytz>=2025.2",
]
